fixed error in overflow

--- a/style/main.css
+++ b/style/main.css
@@ -109,6 +109,7 @@ footer{
 .player {
   display: flex;
   align-items: center;
+  overflow: hidden;
   gap: 1%;
 
   height: 30%;
